[gd_scene load_steps=6 format=3 uid="uid://b4n5y7h8m2k4x"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_0xvnp"]
[ext_resource type="Script" path="res://scripts/systems/HealthSystem.gd" id="2_health"]
[ext_resource type="Script" path="res://scripts/systems/CombatSystem.gd" id="3_combat"]
[ext_resource type="Script" path="res://scripts/systems/InventorySystem.gd" id="4_inventory"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 48)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_0xvnp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("2_health")
max_health = 100

[node name="CombatSystem" type="Node2D" parent="."]
script = ExtResource("3_combat")
damage = 25
attack_range = 80.0
attack_cooldown = 0.5

[node name="InventorySystem" type="Node" parent="."]
script = ExtResource("4_inventory")
max_slots = 10

[node name="WeaponMount" type="Node2D" parent="."]
position = Vector2(16, 0)